2009-10-06  Fumitoshi Ukai  <ukai@chromium.org>

Reviewed by Ariya Hidayat.

        Qt build fix.
        https://bugs.webkit.org/show_bug.cgi?id=29362.

        In Qt 4.5, a new function QPainter::fillRect(QRect, QColor) is
        introduced to avoid the expensive construction of QBrush.
        By casting WebCore::Color to QColor, we can compile on Qt 4.4
        and use optimization for solid color fill in Qt 4.5.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::drawRect):
        (WebCore::GraphicsContext::drawLine):
        (WebCore::drawBorderlessRectShadow):

Canonical link: https://commits.webkit.org/40724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49165 268f45cc-cd09-0410-ab3c-d52691b4dbfc